<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of items -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/listItemContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            style="@style/listItemName"
            android:text="@string/placeholder_item_name" />

        <TextView
            android:id="@+id/quantity"
            style="@style/listItemQuantity"
            android:text="@string/placeholder_item_quantity" />


        <TextView
            android:id="@+id/price"
            style="@style/listItemPrice"
            android:text="@string/placeholder_item_price" />

        <Button
            android:id="@+id/action_sell"
            style="@style/listItemSale"
            android:text="@string/placeholder_item_sale" />

    </LinearLayout>

</LinearLayout>